Fixed side margins to fit on mobile.

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ html, body
     color: rgb(255, 255, 255);
     width: max(80%);
     margin-top: 2%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 2%;
+    margin-right: 2%;
     overflow: hidden;
 }
 
@@ -25,7 +25,7 @@ html, body
     left: 0;
     right: 0;
   }
-  
+
 .logo img {
     align-self: flex-end;
   }
